--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "immer": "^10.1.1",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
